CICO-17114 fixes new action scroll in actions manager if screen is too small

--- a/rover/css/reservation.less
+++ b/rover/css/reservation.less
@@ -209,6 +209,10 @@
       margin-right: 5px;
       padding: 10px;
   }
+  .action-mgr-new{
+      overflow: auto;
+      min-height:500px;
+  }
   .actions-overdue-font{
       font-size: smaller;
       margin-left: -10px;
